--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
       <img src="assets/smart-one.png" alt="Smart One IPTV logo" style="max-width:160px; margin-top:8px; border-radius:8px; box-shadow:0 0 10px rgba(229,9,20,0.3);">
     </li>
 
-    <li>Abre la app y toma una foto del código o pantalla principal.</li>
+    <li>Ejecuta la app, acepta terminos y toma una foto de la pantalla principal.</li>
 
     <!-- Imagen de la interfaz -->
     <li style="list-style:none; text-align:center;">
