--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <li>O entra directamente 👉 <a href="https://apps.apple.com/co/app/smarters-player-lite/id1628995509" target="_blank" class="link-ios">Abrir App Store</a></li>
     <li>Instala la app y ábrela.</li>
     <li>Selecciona la opción <strong>“Login with Xtream Codes API”</strong>.</li>
-    <li>Ingresa tus datos de acceso de <strong>CLICK TV</strong> (usuario, contraseña y URL).</li>
+    <li>Ingresa tus datos de acceso de <strong>CLICK TV</strong> (nick, usuario, contraseña y URL).</li>
     <li>¡Listo! Disfruta de tu contenido en calidad SD a Full HD 🎬</li>
   </ol>
 
@@ -453,7 +453,7 @@
     <!-- Imagen del logo -->
     <li style="list-style:none; margin-top:10px; text-align:center;">
       <p style="color:#ccc; font-size:0.9rem;">El logo de Smart One IPTV es el siguiente:</p>
-      <img src="assets/smart-one.png" alt="Smart One IPTV logo" style="max-width:160px; margin-top:8px; border-radius:8px; box-shadow:0 0 10px rgba(229,9,20,0.3);">
+      <img src="assets/smart-one.png" alt="Smart One IPTV logo" style="max-width:120px; margin-top:8px; border-radius:8px; box-shadow:0 0 10px rgba(229,9,20,0.3);">
     </li>
 
     <li>Ejecuta la app, acepta terminos y toma una foto de la pantalla principal.</li>
@@ -511,12 +511,21 @@
   <h3>Android TV Box / Fire TV</h3>
   <ol class="pasos">
     <li>Abre la app <strong>Downloader</strong> (si no la tienes, descárgala desde Play Store).</li>
+	
+	<!-- Imagen del logo -->
+    <li style="list-style:none; margin-top:10px; text-align:center;">
+           <img src="assets/Downloader.png" alt="Smart One IPTV logo" style="max-width:80px; margin-top:8px; border-radius:8px; box-shadow:0 0 10px rgba(220,9,20,0.3);">
+    </li>
+	
     <li>En la barra de URL escribe:
       <br><strong>3757322</strong> o <em></strong>http://aftv.news/3757322</strong></em></li>
     <li>Presiona “Go” y espera la descarga.</li>
     <li>Selecciona “Instalar” y permite fuentes desconocidas si lo solicita.</li>
-    <li>Abre la app <strong>CLICK TV</strong> e inicia con:
+    <li>Abre la app, selecciona TV</li>
+    <li>Luego <strong>XTREAM CODE</strong></li>
+    <li><strong>CLICK TV PRO</strong> e inicia con:
       <ul class="sublista">
+        <li>NICK (por el usuario)</li>
         <li>Usuario</li>
         <li>Contraseña</li>
         <li>URL del servidor</li>
@@ -535,12 +544,9 @@
        💬 Solicitar acceso por WhatsApp
     </a>
   </p>
-</div>
-
-
-  </div>
-
-  <p class="guia-nota">⚠️ Las aplicaciones y métodos de instalación pueden variar según el modelo o versión del sistema operativo.</p>
+	</div>
+	 </div>
+     <p class="guia-nota">⚠️ Las aplicaciones y métodos de instalación pueden variar según el modelo o versión del sistema operativo.</p>
 </section>
 
 
