--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="demo-banner">✨ Prueba una <strong>demo gratuita de 3 horas</strong> y vive la experiencia CLICK TV. ✨</div>
 
       <div class="ctas">
-        <a href="https://wa.me/573194693823?text=Hola,%20me%20interesar%C3%ADa%20solicitar%20un%20demo%20de%20CLICK%20TV.%20Quisiera%20coordinar%20las%203%20horas%20de%20servicio%20disponibles.%20Por%20favor,%20agradezco%20me%20env%C3%ADen%20toda%20la%20informaci%C3%B3n%20necesaria%20y%20disponibilidad%20para%20programar.%20Gracias!" class="btn primary" target="_blank">
+        <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV,%20quiero%20probar%20la%20demo%20gratuita." class="btn primary" target="_blank">
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="20" height="20">
           Comenzar ahora
         </a>
@@ -81,6 +81,14 @@
 
  </div>
 </section>
+
+<div class="licencia-aviso">
+  <span>⚠️ Importante:</span>
+  El uso de la app <strong>Smart One IPTV</strong> o <strong>Duplex Play</strong>
+  tiene un <strong>valor adicional</strong> al servicio.
+  <a href="javascript:void(0)" class="open-licencia">Ver licencia</a>
+</div>
+
 
 <section class="tendencias-section fade-in">
   <h2 class="tendencia-titulo">🔥 TOP 5 – Películas</h2>
@@ -182,7 +190,7 @@
         <li>🔞 Canales adultos</li>
         <li>⚡ Soporte 24/7 por WhatsApp</li>
       </ul>
-      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Quiero%20activar%20el%20plan%20de%201%20dispositivo." target="_blank" class="btn-plan">Activar plan</a>
+      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV,%20quiero%20información%20para%20activar%20mi%20servicio." target="_blank" class="btn-plan">Activar plan</a>
     </div>
 
     <!-- PLAN 2 -->
@@ -196,7 +204,7 @@
         <li>🔞 Canales adultos</li>
         <li>⚡ Soporte 24/7 por WhatsApp</li>
       </ul>
-      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Quiero%20activar%20el%20plan%20de%202%20dispositivos." target="_blank" class="btn-plan">Activar plan</a>
+        <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV,%20quiero%20información%20para%20activar%20mi%20servicio." target="_blank" class="btn-plan">Activar plan</a>
     </div>
 
     <!-- PLAN 3 -->
@@ -210,7 +218,7 @@
         <li>🔞 Canales adultos</li>
         <li>🚀 Soporte prioritario</li>
       </ul>
-      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Quiero%20activar%20el%20plan%20de%203%20dispositivos." target="_blank" class="btn-plan destacado">Activar plan</a>
+      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV,%20quiero%20información%20para%20activar%20mi%20servicio." target="_blank" class="btn-plan destacado">Activar plan</a>
     </div>
 
     <!-- PLAN 4 -->
@@ -224,7 +232,7 @@
         <li>🔞 Canales adultos</li>
         <li>💬 Soporte personalizado</li>
       </ul>
-      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Quiero%20activar%20el%20plan%20de%204%20dispositivos." target="_blank" class="btn-plan">Activar plan</a>
+      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV,%20quiero%20información%20para%20activar%20mi%20servicio." target="_blank" class="btn-plan">Activar plan</a>
     </div>
 
     <!-- PLAN 5 -->
@@ -238,7 +246,7 @@
         <li>🔞 Canales adultos</li>
         <li>💎 Soporte preferencial</li>
       </ul>
-      <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV!%20Quiero%20activar%20el%20plan%20de%205%20dispositivos." target="_blank" class="btn-plan">Activar plan</a>
+   <a href="https://wa.me/573194693823?text=Hola%20CLICK%20TV,%20quiero%20información%20para%20activar%20mi%20servicio." target="_blank" class="btn-plan">Activar plan</a>
     </div>
   </div>
 <H2></H2>
@@ -458,6 +466,11 @@
 <section class="guia-instalacion fade-in" id="instalacion">
   <h2 class="guia-titulo">📲 Guías de instalación paso a paso</h2>
   <p class="guia-sub">Sigue estos pasos según tu dispositivo y empieza a disfrutar de <strong>CLICK TV</strong> en minutos.</p>
+  
+<div class="swipe-hint">
+  👉 Desliza de derecha a izquierda para ver todos los dispositivos
+</div>
+
 
   <div class="guia-grid">
 
@@ -614,7 +627,7 @@
   <ol class="pasos">
     <li>
       Descarga la app:<br>
-      👉 <a href="https://www.iptvsmarters.com/download/?download=windows_app" target="_blank" class="link-ios">Descargar IPTV Smarters</a>
+      👉 <a href="https://www.mediafire.com/file/xccqjb5zkpkogg9/IPTVSmartersPro-Setup-1.1.1.exe/file" target="_blank" class="link-ios">Descargar IPTV Smarters</a>
       <br><br>
       O usa la versión web:<br>
       👉 <a href="http://webtv-new.iptvsmarters.com/playlists" target="_blank" class="link-ios">Abrir versión web</a>
