--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
     </li>
 	
     <li>En la barra de URL escribe:
-      <br><strong>3757322</strong> o <strong>5426549</strong> o <em></strong>6810017</strong></em></li>
+      <br><strong>3757322</strong> o <strong>5426549</strong></li>
     <li>Presiona “Go” y espera la descarga.</li>
     <li>Selecciona “Instalar” y permite fuentes desconocidas si lo solicita.</li>
     <li>Abre la app, selecciona TV</li>
